# simple_privi

./: Cargo.toml  README.md
data/: data.csv  data_bak.csv
src/: csv_reader.rs  dataset.rs  main.rs  noiser.rs
