[package]
name = "simple_privi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ary = "0.1.0"
crossterm = "0.26.1"
csv = "1.2.1"
opendp = { version = "0.6.2", features = ["use-mpfr", "contrib"] }
tui = { version = "0.19.0", features = ["crossterm"] }
